'proceso_de_carga_realizado'

--- a/source/hospitales/Limpieza Datos Source Hospitales.ipynb
+++ b/source/hospitales/Limpieza Datos Source Hospitales.ipynb
@@ -32,16 +32,21 @@
     }
    ],
    "source": [
-    "data_source = ['establecimiento_salud_beni.csv','establecimiento_salud_la_paz.csv', \\\n",
-    "                'establecimiento_salud_oruro.csv', 'establecimiento_salud_chuquisaca.csv',\\\n",
-    "                'establecimiento_salud_potosi.csv', 'establecimiento_salud_cochabamba.csv',\\\n",
-    "                'establecimiento_salud_tarija.csv','establecimiento_salud_santa_cruz.csv',\\\n",
-    "                'establecimiento_salud_pando.csv']\n",
+    "data_source = ['establecimiento_salud_beni.csv',\n",
+    "               'establecimiento_salud_la_paz.csv', \\\n",
+    "               'establecimiento_salud_oruro.csv', \n",
+    "               'establecimiento_salud_chuquisaca.csv',\\\n",
+    "               'establecimiento_salud_potosi.csv', \n",
+    "               'establecimiento_salud_cochabamba.csv',\\\n",
+    "               'establecimiento_salud_tarija.csv',\n",
+    "               'establecimiento_salud_santa_cruz.csv',\\\n",
+    "               'establecimiento_salud_pando.csv']\n",
     "for data in data_source :\n",
     "    print (data)\n",
     "\n",
     "    #leemos el archivo csv\n",
     "    df_csv = pd.read_csv(data, encoding = \"ISO-8859-1\")\n",
+    "    \n",
     "    #renombramos las columnas\n",
     "    df_csv.columns = ['departamento', 'municipio', 'establecimiento','direccion']\n",
     "\n",
