--- a/source/cobertura_partos/cobertura_partos.ipynb
+++ b/source/cobertura_partos/cobertura_partos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,65 +51,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting : 2020-07-09 10:38:40.281973\n",
-      "--------------\n",
-      "Procesing: cobertura_partos_2014.csv\n",
-      "Creating Dataset...\n",
-      "Finish creating dataframe..\n",
-      "Records Created : 1224270\n",
-      "Connecting to Cluster...\n",
-      "Connecting to Database maternologico...\n",
-      "Inserting data...\n",
-      "Data Completed!\n",
-      "Finish Procesing: cobertura_partos_2014.csv\n",
-      "Finish Time: 2020-07-09 10:39:59.045055\n",
-      "--------------\n",
+      "Begining : 2020-07-09 21:37:33.190627\n",
       "--------------\n",
       "Procesing: cobertura_partos_2015.csv\n",
+      "Starting : 2020-07-09 21:37:33.248488\n",
       "Creating Dataset...\n",
       "Finish creating dataframe..\n",
-      "Records Created : 1237830\n",
+      "Records Created : 247566\n",
       "Connecting to Cluster...\n",
       "Connecting to Database maternologico...\n",
       "Inserting data...\n",
       "Data Completed!\n",
-      "Finish Procesing: cobertura_partos_2015.csv\n",
-      "Finish Time: 2020-07-09 10:41:15.785408\n",
+      "Finish Procesing: cobertura_partos_2012.csv\n",
+      "Finish Time: 2020-07-09 21:38:47.418521\n",
       "--------------\n",
       "Finish All\n"
      ]
     }
    ],
    "source": [
+    "# Codigo para lectura, limpieza, transaformacion, creacion dataset, transformacion del dataframe\n",
+    "# envio del dataframe al cluster\n",
+    "\n",
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
     "from datetime import datetime\n",
     "\n",
-    "print(\"Starting : {}\".format(datetime.now()))\n",
-    "anhos = ['2014','2015'] #,'2010','2011','2012','2013','2014','2015']\n",
+    "print(\"Begining : {}\".format(datetime.now()))\n",
+    "\n",
+    "anhos = ['2015'] #,'2010','2011','2012','2013','2014','2015']\n",
     "\n",
     "df_hospital = load_hospitales()\n",
     "    \n",
     "for anho in (anhos):    \n",
     "    print('--------------')\n",
-    "    f = 'cobertura_partos_' + anho + '.csv'\n",
-    "    print('Procesing: ' + f)\n",
-    "    df_cobertura = pd.read_csv(f, sep = ';')\n",
-    "    # todo todo lo nan que sea 0\n",
+    "    \n",
+    "    file_name = 'cobertura_partos_' + anho + '.csv'\n",
+    "    \n",
+    "    print('Procesing: ' + file_name)\n",
+    "    print(\"Starting : {}\".format(datetime.now()))\n",
+    "    df_cobertura = pd.read_csv(file_name, sep = ';')\n",
     "   \n",
-    "\n",
+    "    #listas para poblar\n",
     "    l_departamento = [] \n",
     "    l_municipio = []\n",
     "    l_tipo = []\n",
     "    l_establecimiento = []\n",
     "    l_anho=  []\n",
+    "    \n",
     "\n",
     "    #limpiamos los valores numericos con 0\n",
     "    df_cobertura['vaginales'] = df_cobertura['vaginales'].fillna(0)\n",
@@ -119,18 +115,20 @@
     "    \n",
     "    #iteramos para poblar nuestro dataset\n",
     "    for index, row in df_cobertura.iterrows():\n",
+    "        \n",
     "        #buscamos el hospital de acuerdo al departamento y municipio\n",
     "        found_hospital = find_hospital(row['departamento'], row['municipio'], df_hospital)\n",
     "\n",
     "        count_vaginales = int(row['vaginales'])\n",
     "        for i in range(count_vaginales):\n",
-    "            l_departamento.append(row['departamento'])\n",
-    "            l_municipio.append(row['municipio'])\n",
+    "            l_departamento.append(row['departamento'].strip())\n",
+    "            l_municipio.append(row['municipio'].strip())\n",
     "            l_tipo.append('vaginales')        \n",
-    "            l_establecimiento.append({'nombre': found_hospital.iloc[0,3]})\n",
+    "            l_establecimiento.append({'nombre': found_hospital.iloc[0,3].strip()})\n",
     "            l_anho.append(anho)\n",
     "\n",
-    "        dataset = { 'departamento' : l_departamento , \n",
+    "        dataset = { \n",
+    "                'departamento' : l_departamento , \n",
     "                'municipio' : l_municipio ,\n",
     "                'tipo' : l_tipo,\n",
     "                'establecimiento' : l_establecimiento,\n",
@@ -139,13 +137,14 @@
     "\n",
     "        count_cesareas = int(row['cesareas'])\n",
     "        for i in range(count_vaginales):\n",
-    "            l_departamento.append(row['departamento'])\n",
-    "            l_municipio.append(row['municipio'])\n",
+    "            l_departamento.append(row['departamento'].strip())\n",
+    "            l_municipio.append(row['municipio'].strip())\n",
     "            l_tipo.append('cesareas')        \n",
-    "            l_establecimiento.append( {'nombre': found_hospital.iloc[0,3]})\n",
+    "            l_establecimiento.append( {'nombre': found_hospital.iloc[0,3].strip()})\n",
     "            l_anho.append(anho)\n",
     "\n",
-    "            dataset = { 'departamento' : l_departamento , \n",
+    "            dataset = { \n",
+    "                'departamento' : l_departamento , \n",
     "                'municipio' : l_municipio ,\n",
     "                'tipo' : l_tipo,\n",
     "                'establecimiento' : l_establecimiento,\n",
@@ -184,23 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "324"
+       "array(['CHUQUISACA', 'LA PAZ ', 'COCHABAMBA', 'ORURO ', 'POTOSI',\n",
+       "       'TARIJA', 'SANTA CRUZ', 'BENI ', 'PANDO '], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_h = pd.read_csv('cobertura_partos_2009.csv',encoding = \"ISO-8859-1\")\n",
-    "df_h.count()[0]"
+    "df_h = pd.read_csv('cobertura_partos_2010.csv',sep=';',encoding = \"ISO-8859-1\")\n",
+    "df_h['departamento'].unique()"
    ]
   },
   {
