--- a/source/consulta_externa/consulta_externa.ipynb
+++ b/source/consulta_externa/consulta_externa.ipynb
@@ -611,13 +611,7 @@
       "Creating ce_menores_5_anhos 4572 records. SANTA CRUZ VALLEGRANDE\n",
       "Creating ce_mayores_5_anhos 16351 records. SANTA CRUZ VALLEGRANDE\n",
       "Creating ce_menores_5_anhos 979 records. SANTA CRUZ TRIGAL\n",
-      "Creating ce_mayores_5_anhos 2482 records. SANTA CRUZ TRIGAL\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Creating ce_mayores_5_anhos 2482 records. SANTA CRUZ TRIGAL\n",
       "Creating ce_menores_5_anhos 896 records. SANTA CRUZ MORO MORO\n",
       "Creating ce_mayores_5_anhos 2832 records. SANTA CRUZ MORO MORO\n",
       "Creating ce_menores_5_anhos 747 records. SANTA CRUZ POSTRER VALLE\n",
@@ -792,13 +786,7 @@
     "    print(\"Starting : {}\".format(datetime.now()))\n",
     "    df_cobertura = pd.read_csv(file_name, sep = ';')\n",
     "   \n",
-    "    #listas para poblar\n",
-    "    l_departamento = [] \n",
-    "    l_municipio = []\n",
-    "    l_tipo = []\n",
-    "    l_establecimiento = []\n",
-    "    l_anho=  []\n",
-    "    \n",
+    "   \n",
     "\n",
     "    #limpiamos los valores numericos con 0\n",
     "    df_cobertura['ce_menores_de_5_años'] = df_cobertura['ce_menores_de_5_años'].fillna(0)\n",
@@ -808,6 +796,13 @@
     "    \n",
     "    #iteramos para poblar nuestro dataset\n",
     "    for index, row in df_cobertura.iterrows():\n",
+    "        \n",
+    "         #listas para poblar\n",
+    "        l_departamento = [] \n",
+    "        l_municipio = []\n",
+    "        l_tipo = []\n",
+    "        l_establecimiento = []\n",
+    "        l_anho=  []\n",
     "        \n",
     "        #buscamos el hospital de acuerdo al departamento y municipio\n",
     "        found_hospital = find_hospital(row['departamento'], row['municipio'], df_hospital)\n",
@@ -849,31 +844,31 @@
     "\n",
     "        #TODO correccion realizar el insert a la bd por row del archivo\n",
     "\n",
-    "    df_frame = pd.DataFrame(dataset , columns = ['departamento', 'municipio', 'tipo', 'establecimiento', 'anho'])\n",
-    "    print('Finish creating dataframe..')\n",
-    "    print('Records Created : {}'.format(df_frame.count()[0]))\n",
+    "        df_frame = pd.DataFrame(dataset , columns = ['departamento', 'municipio', 'tipo', 'establecimiento', 'anho'])\n",
+    "        print('Finish creating dataframe..')\n",
+    "        print('Records Created : {}'.format(df_frame.count()[0]))\n",
     "\n",
     "\n",
-    "    # Load csv dataset\n",
+    "        # Load csv dataset\n",
     "\n",
-    "    # Connect to MongoDB\n",
-    "    print('Connecting to Cluster...')\n",
-    "    client =  MongoClient(\"mongodb+srv://maternologico:maternologico@cluster0.5da7i.mongodb.net/maternologico?retryWrites=true&w=majority\")\n",
-    "    \n",
-    "    print('Connecting to Database maternologico...')\n",
-    "    db = client['maternologico']\n",
-    "    collection = db['consultas_externas']\n",
-    "    df_frame.reset_index(inplace=True)\n",
-    "    data_dict = df_frame.to_dict(\"records\")\n",
-    "    \n",
-    "    # Insert collection\n",
-    "    print('Inserting data...')\n",
-    "    collection.insert_many(data_dict)\n",
+    "        # Connect to MongoDB\n",
+    "        print('Connecting to Cluster...')\n",
+    "        client =  MongoClient(\"mongodb+srv://maternologico:maternologico@cluster0.5da7i.mongodb.net/maternologico?retryWrites=true&w=majority\")\n",
     "\n",
-    "    print('Data Completed!')\n",
-    "    print('Finish Procesing: ' + f)\n",
-    "    print('Finish Time: {}'.format(datetime.now()))\n",
-    "    print('--------------')\n",
+    "        print('Connecting to Database maternologico...')\n",
+    "        db = client['maternologico']\n",
+    "        collection = db['consultas_externas']\n",
+    "        df_frame.reset_index(inplace=True)\n",
+    "        data_dict = df_frame.to_dict(\"records\")\n",
+    "\n",
+    "        # Insert collection\n",
+    "        print('Inserting data...')\n",
+    "        collection.insert_many(data_dict)\n",
+    "\n",
+    "        print('Data Completed!')\n",
+    "        print('Finish Procesing: ' + f)\n",
+    "        print('Finish Time: {}'.format(datetime.now()))\n",
+    "        print('--------------')\n",
     "\n",
     "print(\"Finish All\")\n",
     "\n",
@@ -882,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1117,7 @@
        "[327 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,33 +1130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      False\n",
-       "1      False\n",
-       "2      False\n",
-       "3      False\n",
-       "4      False\n",
-       "       ...  \n",
-       "322    False\n",
-       "323    False\n",
-       "324    False\n",
-       "325    False\n",
-       "326    False\n",
-       "Name: ce_menores_de_5_años, Length: 327, dtype: bool"
+       "4178809"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_consulta['ce_menores_de_5_años'].isnull()"
+    "df_consulta['ce_menores_de_5_años'].sum()"
    ]
   },
   {
